--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
       
       - name: Pack
         run: |
-          dotnet pack MyGreatLib.csproj -o artifacts/
+          dotnet pack --configuration Release
 
       - uses: actions/upload-artifact@v1
         with:
