--- a/test-nuget-package-v2.csproj
+++ b/test-nuget-package-v2.csproj
@@ -5,7 +5,7 @@
     <RootNamespace>test_nuget_package_v2</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PackageId>test_nuget_package_v2</PackageId>
+    <PackageId>test_nuget_package_v2_seiyainoue_sample</PackageId>
     <Version>1.0.0</Version>
     <Authors>test_inoue</Authors>
     <Company>testinoue_company</Company>
