--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,4 +29,5 @@ jobs:
 
       - name: Publish to GitHub Packages
         run: |
-          dotnet nuget push "bin/Release/*.nupkg" --source "github"
+          dotnet nuget add source "https://nuget.pkg.github.com/seiyainoueM/index.json" -n "github" -u seiyainoueM -p ${{secrets.GH_PACKAGES_PAT}} --store-password-in-clear-text
+          dotnet nuget push "bin/Release/*.nupkg" --api-key ${{secrets.GH_PACKAGES_PAT}} --source "github" --skip-duplicate
